--- a/style.css
+++ b/style.css
@@ -1,29 +1,40 @@
 body{
     height: 100vh;
     background: black;
+    overflow: hidden;
 }
 
 #icon-menu {
     height: 100px;
     width: 100px;
     position: relative;
-    top:-19px;
-    left: 200px;
+    left: 50px;
+}
+
+.menu-radius{
+    height: 400px;
+    width: 446px;
+    border-radius: 50%;
+    position: flex;
+    margin-top: -12px;
+    margin-left: -440px;
+    background: rgba(22, 118, 107, 1);
 }
 
 nav{
     position: absolute;
-    top: 290px;
-    left: -120px; /* tag para mover o menu*/
-    align-content: left;
-    
+    top: 190px;
+    left: 0px; /* tag para mover o menu*/
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 nav .nav-content{
     display: flex;
-    align-items: left;
+    align-items: center;
     justify-content: center;
-    
 }
 
 
@@ -37,25 +48,45 @@ nav .nav-content{
     justify-content: center;
     border-radius: 50%;
     box-shadow: 0 0 20px rgba(0,0,0,0.2); /*Sombra do Menu*/
-    left: 50px;
-    top: 15px;
+    top: 135px;
+    left: -100px;
+    
 }
 .nav-content .toggle-btn{
     font-size: 35px;
     color: #0e2431;
+    z-index: 100;
+    cursor: pointer;
+    transition: all 0.7s ease;
+}
+
+.nav-content span {
+    position: absolute;
+    transition: all 0.7s ease;
+    opacity: 0;
+    left: -100px;
+    top: 130px;
+     /*rotate Radius menu*/
+}
+
+nav.open .nav-content span{
+    transform: rotate(calc(var(--i) * (290deg/-8))) translateY(190px);
+    opacity: 1;
 }
 
 .nav-content span a{
     text-decoration: none; /*tag para tirar decoraçao do link*/
 } 
 
-.nav-content span a{
-    position: absolute;
-    transform: rotate(calc(var(--i) * (290deg/-8))) translateY(190px); /*rotate Radius menu*/
-}
-
 .nav-content span a i{
     font-size: 25px;
     color: #0e2431;
     transform: rotate(calc(var(--i) * (180deg/5))) ; /*rotate icon code*/
+    opacity: 0.8;
+    transition: 0.2s;
 }
+
+.nav-content span a:hover i{
+    opacity: 1;
+}
+
